# my-agent-on-device

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
bench/: gt_eval.mjs  rag_routing_eval.json  toolcall_test.mjs  toolcall_test.sh  tools.json  ui_cancel_test.mjs  ui_drive.mjs  ui_send.mjs
docs/: ARCHITECTURE.md  TESTING.md  TROUBLESHOOTING.md
docs/superpowers/plans/: 2026-06-12-capture-region-codex.md  2026-06-12-screenshot-vision.md  2026-06-13-workspace-aware-discoverability.md
docs/superpowers/specs/: 2026-06-11-local-agent-design.md  2026-06-11-phase2-workspace-image-persona-design.md  2026-06-12-macos-cross-platform-port.md  2026-06-12-screenshot-vision-design.md  2026-06-13-workspace-aware-discoverability-design.md  2026-06-14-local-search-rag-design.md  2026-06-15-packaging-single-installer-design.md  capability-discoverability-review.md
drafts/altools-dll-tauri/: SKILL.md
drafts/altools-dll-tauri/templates/: alsts.rs.tmpl  alupdate.rs.tmpl  mod.rs.tmpl
installer/: .gitignore  BUILD.md  README.md  collect-payload.ps1  local-agent.iss
skills/experimental/altools-ci-generator/: SKILL.md
skills/experimental/altools-ci-run/: SKILL.md
skills/experimental/altools-module-deploy/: SKILL.md
skills/experimental/altools-module-deploy/scripts/: cdn_utils.py  deploy_modules.py  preview_modules.py
skills/experimental/altools-setup-deploy/: SKILL.md
skills/experimental/altools-setup-deploy/scripts/: cdn_utils.py  deploy_to_cdn.py  preview_appinfo.py
skills/experimental/bump-rc-version/: SKILL.md
skills/experimental/bump-rc-version/scripts/: bump_rc_version.py
skills/experimental/euckr-to-utf8bom/: SKILL.md
skills/experimental/euckr-to-utf8bom/scripts/: convert_encoding.py
skills/experimental/msbuild/: SKILL.md
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: adversarial_fs_test.rs  dump_request.rs  failure_recovery_test.rs  live_bg_test.rs  rag_routing_ablation.rs
src-tauri/src/: agent.rs  commands.rs  config.rs  lib.rs  localsearch.rs  logging.rs  main.rs  models.rs  sessions.rs  workspace_summary.rs
src-tauri/src/llm/: client.rs  server.rs
src-tauri/src/tools/: archive.rs  capture.rs  fs_tools.rs  image_ai.rs  image_tools.rs  index.rs  mod.rs  pdf_make.rs  pdf_tools.rs  profile.rs  search.rs  workspace.rs
src-tauri/tests/: e2e_agent.rs  e2e_rag.rs
src/components/: Composer.tsx  MessageView.tsx  RegionOverlay.tsx  SessionsSidebar.tsx  SettingsPanel.tsx  ThinkingBlock.tsx  ToolStep.tsx
src/hooks/: useAgent.ts
src/lib/: restore.ts
src/styles/: global.css
