[package]
name = "local-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "local_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
