[package]
name = "local-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "local_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time", "io-util", "net"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
walkdir = "2"
globset = "0.4"
image = "0.25"
pdf-extract = "0.10"
xcap = "0.9"
trash = "5"
zip = { version = "8", default-features = false, features = ["deflate"] }
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
opt-level = "s"
