[package]
name = "local-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
# 바이너리가 2개(본 앱 + region-capture 헬퍼)라 `cargo run`(tauri dev)의 기본을 명시
default-run = "local-agent"

[lib]
name = "local_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 자체 영역 캡처 오버레이 — webview 없는 순수 네이티브 창, 별도 프로세스(크래시 격리)
[[bin]]
name = "region-capture"
path = "src/bin/region_capture.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time", "io-util", "net"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
walkdir = "2"
globset = "0.4"
image = "0.25"
ndarray = "0.17"
lopdf = "0.34"
pdf-extract = "0.10"
rfd = "0.15"
xcap = "0.9"
trash = "5"
zip = { version = "8", default-features = false, features = ["deflate"] }
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
# region-capture 헬퍼(자체 캡처 오버레이) 전용 — 본 앱 라이브러리에서는 사용하지 않는다
winit = "0.30"
softbuffer = "0.4"

# ort onnxruntime 적재 — alian 과 동일하게 Windows 는 load-dynamic (MSVC LNK2038 회피).
# onnxruntime.dll 은 vendor/onnxruntime/ 정본을 ORT_DYLIB_PATH 로 지정해 로드한다.
[target.'cfg(windows)'.dependencies]
ort = { version = "=2.0.0-rc.12", features = ["ndarray", "load-dynamic"] }

[target.'cfg(not(windows))'.dependencies]
ort = { version = "=2.0.0-rc.12", features = ["ndarray"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
opt-level = "s"
